objects/MTR_Case_Region_and_Segment__mdt.object
<CustomObject>
    <description>Selecting Region and Segments based on MTR Product Query</description>
    <fields>
        <fullName>Account_Region__c</fullName>
        <label>Account Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>AEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RISK</fullName>
                    <default>true</default>
                    <label>RISK</label>
                </value>
                <value>
                    <fullName>LEGAL</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>UKI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Region__c</fullName>
        <label>Case Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Segment__c</fullName>
        <label>Case Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Field_Type__c</fullName>
        <label>Product Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Field</fullName>
                    <default>true</default>
                    <label>Standard Field</label>
                </value>
                <value>
                    <fullName>Product Segment/Brand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Query</label>
        <type>Checkbox</type>
    </fields>
    <label>MTR Case Region and Segment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Business_Unit__c</columns>
        <columns>Product_Query__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Case_Region__c</columns>
        <columns>Case_Segment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>MTR Case Region and Segments</pluralLabel>
</CustomObject>